Time: 61 ms (5.04%), Space: 55.4 MB (35.90%) - LeetHub